--- a/src/components/ExchangeRate.css
+++ b/src/components/ExchangeRate.css
@@ -1,21 +1,19 @@
-/* ExchangeRate.css */
-
 .container {
     background-color: #180157;
     border: 1px solid #ccc;
-    border-radius: 20px;
     padding: 20px;
     margin-top: 20px;
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     max-width: 400px;
     color: white;
+    overflow-y: scroll;
+    max-height: 300px;
+    justify-content: flex-start;
 }
 
 .content {
@@ -69,4 +67,17 @@ table td {
 .currency-select select {
     padding: 8px;
     font-size: 14px;
+}
+
+.container::-webkit-scrollbar {
+    width: 0.2em;
+}
+
+.container::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 5px;
+}
+
+.container::-webkit-scrollbar-track {
+    background-color: #180157;
 }
